fixes for valign and prevent overlap

--- a/web/web_client/components/featured-player/featuredPlayer.less
+++ b/web/web_client/components/featured-player/featuredPlayer.less
@@ -286,7 +286,7 @@
         flex-direction: column;
 
         &--intermission {
-          margin-top: -150px;
+          border-bottom: 200px solid transparent;
           min-height: 700px;
         }
 
