--- a/web/web_client/components/show-player/showPlayer.less
+++ b/web/web_client/components/show-player/showPlayer.less
@@ -298,7 +298,7 @@
         flex-direction: column;
 
         &--intermission {
-          margin-top: -150px;
+          border-bottom: 200px solid transparent;
           min-height: 700px;
         }
 
